--- a/package.json
+++ b/package.json
@@ -1,38 +1,22 @@
 {
-  "name": "salmin-habibu-seif-creative-portfolio",
+  "name": "salmin-habibu-seif-|-creative-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "npm-run-all --parallel dev:client dev:server",
-    "dev:client": "vite",
-    "dev:server": "tsx watch server/server.ts",
-    "build": "vite build && npm run build:server",
-    "build:server": "tsc -p server/tsconfig.server.json",
-    "start": "node server/dist/server.js",
+    "dev": "vite",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "colorthief": "^2.6.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "framer-motion": "^12.23.12",
-    "lucide-react": "^0.542.0",
-    "multer": "^2.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.542.0"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/multer": "^2.0.0",
     "@types/node": "^22.14.0",
-    "npm-run-all": "^4.1.5",
-    "ts-node-dev": "^2.0.0",
-    "tsx": "^4.20.5",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
