--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.2",
-    "framer-motion": "^12.23.12",
-    "lucide-react": "^0.542.0"
+    "react": "18.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "6.22.3",
+    "framer-motion": "11.0.8",
+    "lucide-react": "0.344.0",
+    "three": "0.160.0",
+    "@react-three/fiber": "8.15.16",
+    "@react-three/drei": "9.99.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
