--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lucide-react": "0.344.0",
     "three": "0.160.0",
     "@react-three/fiber": "8.15.16",
-    "@react-three/drei": "9.99.0"
+    "@react-three/drei": "9.99.0",
+    "maath": "0.10.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
