--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "salmin-habibu-seif-|-creative-portfolio",
+  "name": "portfolio-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,20 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "6.22.3",
-    "framer-motion": "11.0.8",
-    "lucide-react": "0.344.0",
-    "three": "0.160.0",
-    "@react-three/fiber": "8.15.16",
-    "@react-three/drei": "9.99.0",
-    "maath": "0.10.7"
+    "@react-three/drei": "^9.99.0",
+    "@react-three/fiber": "^8.15.16",
+    "framer-motion": "^11.0.8",
+    "jspdf": "^2.5.1",
+    "lucide-react": "^0.344.0",
+    "maath": "^0.10.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "three": "0.160.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.4"
   }
 }
